Fix alignment of form elements and content

--- a/osmaxx-py/osmaxx/excerptexport/static/excerptexport/stylesheets/main.css
+++ b/osmaxx-py/osmaxx/excerptexport/static/excerptexport/stylesheets/main.css
@@ -13,7 +13,7 @@ header > .topBar    { padding: 1rem; }
                     -webkit-flex-flow: column nowrap; -moz-flex-flow: column nowrap; -ms-flex-flow: column nowrap; flex-flow: column nowrap;
                     overflow-y: auto; height: 100%; }
 .content            { padding: 1rem; }
-.content > *:last-child { margin-bottom: 1rem; display: block; }
+.content > *:last-child:after { display: block; content:""; margin-bottom: 1rem; } /* fixes padding-bottom bug */
 
 footer p            { margin: 1rem; }
 
@@ -46,8 +46,8 @@ footer p            { margin: 1rem; }
                                     -webkit-justify-content: space-between; -moz-justify-content: space-between; -ms-justify-content: space-between; justify-content: space-between;
                                     width: 100%; */}
 .container-row                      { flex-shrink: 1; overflow: scroll; }
-.grid-row.separated                 { -webkit-justify-content: space-between; -moz-justify-content: space-between; -ms-justify-content: space-between; justify-content: space-between; }
-.grid-row.balanced                  { -webkit-justify-content: space-around; -moz-justify-content: space-around; -ms-justify-content: space-around; justify-content: space-around; }
+.box-column-container.separated     { -webkit-justify-content: space-between; -moz-justify-content: space-between; -ms-justify-content: space-between; justify-content: space-between; }
+.box-column-container.balanced      { -webkit-justify-content: space-around; -moz-justify-content: space-around; -ms-justify-content: space-around; justify-content: space-around; }
 
 
 .messagebox         { box-shadow: 0px 2.5rem 5rem gray; z-index: 10000; }
